--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,33 +1,39 @@
 version: '3'
 services:
-  mongodb:
-    image: mongo
+  postgresdb:
+    image: postgres
     restart: always
     ports:
-      - 27017:27017
+      - 5432:5432 
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=password
+      - POSTGRES_USER=postgresadmin
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=test
     volumes:
-      - mongo-data:/data/db
-  mongo-express:
-    image: mongo-express
+      - db-data:/test/db
+  pgadmin:
+    image: dpage/pgadmin4
     restart: always
     ports:
-      - 8080:8081
+      - 5050:80
     environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=password
-      - ME_CONFIG_MONGODB_SERVER=mongodb
+      - PGADMIN_DEFAULT_EMAIL=admin@gmail.com
+      - PGADMIN_DEFAULT_PASSWORD=admin
     depends_on:
-      - mongodb
-  my-app:
-    image: j0d0va/my-app
+      - postgresdb
+  demo-app:
+    image: vector30/postgres-node-demo
     restart: always
     ports:
       - 3000:3000
+    environment:
+      - DB_USER=postgresadmin
+      - DB_HOST=postgresdb
+      - DB_DATABASE=test
+      - DB_PASSWORD=password
+      - DB_PORT=5432
     depends_on:
-      - mongodb
+      - postgresdb
 volumes:
-  mongo-data:
+  db-data:
     driver: local
