--- a/submission/akshith6212@gmail.com/task1_solution.yaml
+++ b/submission/akshith6212@gmail.com/task1_solution.yaml
@@ -1,33 +1,28 @@
 version: '3'
 services:
-  mongodb:
+  postgres:
     image: postgres
-    restart: always
-    ports:
-      - 8080:8080
-    environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=password
-    volumes:
-      - postgres-data:/data/db
-  pgadmin:
-    image: dpage/pgadmin4
     restart: always
     ports:
       - 5432:5432
     environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=password
+    volumes:
+      - ./volume:/var/lib/postgresql/data  
+  pgadmin4:
+    image: "dpage/pgadmin4"
+    restart: always
+    ports:
+      - 5555:80
+    environment:
       - PGADMIN_DEFAULT_EMAIL=admin
-      - PGADMIN_DEFAULT_EMAILPASSWORD=password
-      #SERVER is set in pgadmin
-    depends_on:
-      - pgdb
-  my-app:
-    image: akshith6212/pgdb:1.0
+      - PGADMIN_DEFAULT_PASSWORD=password
+      # Server is added in the pgadmin4 gui :)
+  pgdb:
+    image: akshith6212/pgdb:2.0
     restart: always
     ports:
       - 3000:3000
     depends_on:
-      - pgdb
-volumes:
-  mongo-data:
-    driver: local
+      - postgres
